<resources>
    <string name="app_name">online diary</string>
    <string name="name">name\n</string>
    <string name="password">password</string>
    <string name="teachers">teachers</string>
    <string name="students">students</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in2">sing in</string>
    <string name="name3">"Email "</string>
    <string name="Log_in">Log in</string>
    <string name="sign_in3">"Sign in "</string>
    <string name="forgotps">Forgot password?</string>
    <string name="email.com">email@email.com</string>
</resources>